--- a/ui/src/styles.less
+++ b/ui/src/styles.less
@@ -193,7 +193,7 @@ Refer : https://styleguide.daf.com/en/guidelines-for-developers/use-of-colors
 }
 .rightContainer{
     &.menuCollapsed {
-        padding-left: 65px;
+        padding-left: 100px;
         @media @mobile {
             padding-left: 0px;
         }
